fix: navigation z-index

--- a/public/styles.css
+++ b/public/styles.css
@@ -165,6 +165,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index:999;
 }
 .nav-btn-top:hover{
     background:#fff;
